[IWH-151](feat): implement isApproved property in post requests
implement isApproved property for `getPostsInVicinity` and
`getPostByUuid` endpoints

Ticket: https://iwashere.atlassian.net/browse/IWH-151
